fix text align start

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -458,6 +458,9 @@ a {
   .t-res {
     text-align: start;
   }
+  .text-stop {
+    text-align: start !important;
+  }
   .box-test {
     width: 430px;
     height: 385px;
